--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,5 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.16'
 }
